Changed structure of p0

--- a/Projects/p0/images.html
+++ b/Projects/p0/images.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Google Images</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./static/style.css">
 </head>
 
 <body>
