--- a/Projects/p0/index.html
+++ b/Projects/p0/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Google</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./static/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 
     <!--google_logo controls the position of google logo-->
     <div class="google_logo">
-        <img alt="Google" src="googlelogo.png" data-atf="1" width="272" height="92">
+        <img alt="Google" src="./static/googlelogo.png" data-atf="1" width="272" height="92">
     </div>
 
     <!--search class controls the position of search form -->
