--- a/Projects/p0/advanced.html
+++ b/Projects/p0/advanced.html
@@ -5,7 +5,7 @@
 
     <meta content="text/html" charset="utf-8" http-equiv="content-type">
     <title>Google Advanced Search</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./static/style.css">
 
 </head>
 
